--- a/.github/workflows/test-branch-pr.yml
+++ b/.github/workflows/test-branch-pr.yml
@@ -8,23 +8,23 @@ jobs:
   check-label:
     runs-on: ubuntu-latest
     outputs:
-      is_help_wanted: ${{ steps.check_label.outputs.is_help_wanted }}  # Установка выходных данных для следующего job
+      need_tests: ${{ steps.check_label.outputs.need_tests }}  # Установка выходных данных для следующего job
     steps:
-      - name: Check for 'help wanted' label
+      - name: Check for 'run_tests' label
         id: check_label
         run: |
-          if [ "${{ github.event.label.name }}" == "help wanted" ]; then
-            echo "is_help_wanted=true" >> $GITHUB_ENV
-            echo "::set-output name=is_help_wanted::true"  # Устанавливаем выходные данные
+          if [ "${{ github.event.label.name }}" == "run_tests" ]; then
+            echo "need_tests=true" >> $GITHUB_ENV
+            echo "::set-output name=need_tests::true"  # Устанавливаем выходные данные
           else
-            echo "is_help_wanted=false" >> $GITHUB_ENV
-            echo "::set-output name=is_help_wanted::false"  # Устанавливаем выходные данные
+            echo "need_tests=false" >> $GITHUB_ENV
+            echo "::set-output name=need_tests::false"  # Устанавливаем выходные данные
           fi
 
   run-tests:
     runs-on: ubuntu-latest
     needs: check-label  # Зависит от check-label
-    if: needs.check-label.outputs.is_help_wanted == 'true'  # Запустить только если метка 'help wanted' была найдена
+    if: needs.check-label.outputs.need_tests == 'true'  # Запустить только если метка 'help wanted' была найдена
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
